kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loom
  labels:
    name: loom
    environment: production
